Added "Contact Us" Action link

--- a/MVC_Start/Views/Person/Index.cshtml
+++ b/MVC_Start/Views/Person/Index.cshtml
@@ -20,6 +20,9 @@
         <p>Address: <input asp-for="@Model.Address" /></p>
 
         <button type="submit">Submit</button>
+
+        <div>@Html.ActionLink("Contact us", "Contact", "Home")</div>
+
     </form>
 
 </body>
