Added Home Page and Contact Us links

--- a/MVC_Start/Views/Home/Index.cshtml
+++ b/MVC_Start/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = null;
 }
+@model int;
 
 <!DOCTYPE html>
 
@@ -10,6 +11,6 @@
     <title>Index</title>
 </head>
 <body>
-  <h2>Hello world!</h2>
+  <h2>Hello world! @Model</h2>
 </body>
 </html>
