--- a/MVC_Start/Views/Person/Index.cshtml
+++ b/MVC_Start/Views/Person/Index.cshtml
@@ -22,6 +22,7 @@
         <button type="submit">Submit</button>
 
         <div>@Html.ActionLink("Contact us", "Contact", "Home")</div>
+        <a asp-controller="Home" asp-action="Index" asp-route-id="100"> Home page </a>
 
     </form>
 
